Maked login form (seems not good)

--- a/projectLogin/index.html
+++ b/projectLogin/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hello!</title>
+    <title>Home</title>
 </head>
 <body>
-    <a href="index.html" id="title"><h1>Home</h1></a>
+    <h1><a href="index.html" id="title">Welcome!</a></h1>
+    <div id="loginBox">
+        <h2 class="center">Login</h2>
+        <form action="/user" id="form">
+            <input type="text" name="userName" placeholder="User Name"/>
+            <button>Login</button>
+        </form>
+    </div>
 
     <script src="app.js"></script>
 </body>
