--- a/projectLogin/index.html
+++ b/projectLogin/index.html
@@ -11,7 +11,7 @@
     <h1><a href="index.html" id="title">Welcome!</a></h1>
     <div id="loginBox">
         <h2 class="center">Login</h2>
-        <form action="/user" id="form">
+        <form action="/user" class="center" id="form">
             <input type="text" name="userName" placeholder="User Name"/>
             <button>Login</button>
         </form>
