--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <h1 class="hidden" id="greeting"></h1>
     <form class="hidden" id="login-form">
         <input required maxlength="15" type="text" placeholder="What is your name?"/>
-        <input type="submit" value="Log In">
+        <input type="submit" value="Log In"/>
     </form>
     <h2 id="clock">00:00</h2>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </html>
