--- a/assignment_8/index.html
+++ b/assignment_8/index.html
@@ -13,10 +13,7 @@
     <form id="guessForm">Guess the number: <input id="guess" required type="number" /> 
         <input type="submit" value="Play!" />
     </form>
-    <div id="resultDiv" class="hidden">
-        <p id="result">result is here</p>
-        <h4>isWin is here</h4>
-    </div>
+    <p id="result" class="hidden">result wil be here</p>
     <script src="src/index.js"></script>
 </body>
 </html>
