--- a/final/index.html
+++ b/final/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    
+    <link rel="stylesheet" href="css/alter.css">
     <title>Home</title>
 </head>
 <body>
@@ -21,12 +22,25 @@
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required/>
     </form>
-    <ul id="todo-list" class="text-background">
+    <ul id="todo-list" class="list-background">
     </ul>
+
+    <div id="quote" class="text-background">
+        <span></span>
+        <br>
+        <span id="author"></span>
+    </div>
+
+    <div id="weather" class="text-background">
+        <span></span>
+        <span></span>
+    </div>
 
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
